--- a/Template/index.html
+++ b/Template/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     
-  <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <title>Koholo.com</title>
   <link rel="stylesheet" href="main.css">
@@ -48,11 +47,66 @@
       </ul>
     </div>
   </div>
-</nav>
+ </nav>
+   
+    <div class="container">
+    <div class="row">
+        <h1 id="searchhead">Sök efter produkter här...</h1>
+        <div class="col-xs-8 col-xs-offset-2">
+		    <div class="input-group">
+                <div class="input-group-btn search-panel">
+                    <button type="button" id="categorybtn" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                    	<span id="search_concept">Kategori</span> <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu" role="menu">
+                      <li><a href="#contains">Contains</a></li>
+                      <li><a href="#its_equal">It's equal</a></li>
+                      <li><a href="#greather_than">Greather than ></a></li>
+                      <li><a href="#less_than">Less than</a></li>
+                      <li class="divider"></li>
+                      <li><a href="#all">Anything</a></li>
+                    </ul>
+                </div>
+                <input type="hidden" name="search_param" value="all" id="search_param">         
+                <input type="text" class="form-control" name="x" placeholder="Sök produkt...">
+                <span class="input-group-btn">
+                    <button id ="searchbtn" class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
+                </span>
+            </div>
+        </div>
+	</div>
+</div>
+    
+    <h2 id="popular">Populära butiker</h2>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
   
-<div class="container">
-  <h3>Template</h3>
-    <p>Första utkast på template, sidan är responsiv som den är</p>
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="mq.jpg" alt="MQ">
+    </div>
+
+    <div class="item">
+      <img src="jc.jpg" alt="JC">
+    </div>
+
+    <div class="item">
+      <img src="hm.png" alt="HM">
+    </div>
+
+    <div class="item">
+      <img src="ahlens.gif" alt="Åhlens">
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
     
     <footer id="sidfot" class="footer">
