--- a/Template/main.css
+++ b/Template/main.css
@@ -1,3 +1,37 @@
+#myCarousel {
+    width: 20%;
+    height: 200px;
+    margin-left: 5%;
+    margin-top: 1%;
+}
+
+.carousel-control.right {
+    background-image: linear-gradient(to right,rgba(0,0,0,.0) 0,rgba(0,0,0,.0) 100%); 
+}
+
+.carousel-control.left {
+    background-image: linear-gradient(to right,rgba(0,0,0,.0) 0,rgba(0,0,0,.0) 100%); 
+}
+
+.carousel-inner>.item>img {
+    margin-top: 10%;
+}
+
+.glyphicon-chevron-right {
+    color: red;
+}
+
+.glyphicon-chevron-left {
+    color: red;
+}
+
+
+.carousel-inner>.item>img {
+    width: 60%;
+    height: 100%;
+    margin-left: 20%;
+}
+
 #logga {
     font-family: 'Ubuntu', sans-serif;
     font-style: bold;
@@ -14,6 +48,14 @@
     margin-bottom: 1%;
 }
 
+#popular {
+    font-family: 'Lobster', cursive;
+    font-style: bold;
+    margin-bottom: 0;
+    margin-left: 10%;
+    margin-top: 9%;
+}
+
 #navigation {
     background-color: red;
     border: none;
@@ -27,18 +69,44 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 60px;
     background-color: #f5f5f5;
     display: block;
     box-sizing: border-box;
     text-align: center;
     font-style: bold;
-    height: 7%;
+    height: 5%;
     font-size: 80%;
 }
 
 #copyright {
     margin-top: 1%;
+}
+
+#searchhead {
+    text-align: center;
+    font-family: 'Lobster', cursive;
+    font-style: bold;
+    font-size: 200%;
+}
+
+.col-xs-8 {
+    width: 80%;
+}
+
+.col-xs-offset-2 {
+    margin-left: 10%;
+}
+
+#searchbtn {
+    color: white;;
+    background-color: red;
+    border-color: #ccc;
+}
+
+#categorybtn {
+    color: white;;
+    background-color: dimgray;
+    border-color: #ccc;
 }
 
 .navbar-inverse .navbar-brand {
