--- a/Template/index.html
+++ b/Template/index.html
@@ -42,7 +42,7 @@
         <li><a href="#">Om oss</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Registrera dig</a></li>
+        <li><a href="register.html"><span class="glyphicon glyphicon-user"></span> Registrera dig</a></li>
         <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logga in</a></li>
       </ul>
     </div>
