--- a/Template/index.html
+++ b/Template/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    
-  <meta charset="utf-8">
-  <title>Koholo.com</title>
-  <link rel="stylesheet" href="main.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-  <link rel="stylesheet" href="main.css">
-    
+    <meta charset="utf-8">
+    <title>Koholo.com</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
 </head>
     
 <body>
@@ -43,7 +40,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="register.html"><span class="glyphicon glyphicon-user"></span> Registrera dig</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logga in</a></li>
+        <li><a href="Login.html"><span class="glyphicon glyphicon-log-in"></span> Logga in</a></li>
       </ul>
     </div>
   </div>
