--- a/Template/index.html
+++ b/Template/index.html
@@ -73,8 +73,42 @@
         </div>
 	</div>
 </div>
-    
-    <h2 id="popular">Populära butiker</h2>
+<div class="row">
+    <div align="center" class="bildspel col-md-4">
+    <h2 class="popular">Populära butiker</h2>
+    <div id="myCarousel1" class="carousel slide" data-ride="carousel">
+  
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="mq.jpg" alt="MQ">
+    </div>
+
+    <div class="item">
+      <img src="jc.jpg" alt="JC">
+    </div>
+
+    <div class="item">
+      <img src="hm.png" alt="HM">
+    </div>
+
+    <div class="item">
+      <img src="ahlens.gif" alt="Åhlens">
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel1" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel1" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+    </div>
+    <div align="center" class="bildspel col-md-4">
+    <h2 class="popular">Rekommenderade butiker</h2>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
   
   <div class="carousel-inner" role="listbox">
@@ -105,6 +139,41 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+    </div>
+    <div align="center" class="bildspel col-md-4">
+    <h2 class="popular">Populära produkter</h2>
+    <div id="myCarousel2" class="carousel slide" data-ride="carousel">
+  
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="mq.jpg" alt="MQ">
+    </div>
+
+    <div class="item">
+      <img src="jc.jpg" alt="JC">
+    </div>
+
+    <div class="item">
+      <img src="hm.png" alt="HM">
+    </div>
+
+    <div class="item">
+      <img src="ahlens.gif" alt="Åhlens">
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel2" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel2" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+    </div>
+        </div>
     
     <footer id="sidfot" class="footer">
         <p id="copyright">Presenteras av Koholo Shopping Network © 2016 koholo.com. Alla rättigheter förbehållna</p>
