--- a/Template/main.css
+++ b/Template/main.css
@@ -1,10 +1,13 @@
-#myCarousel {
-    width: 20%;
+#myCarousel, #myCarousel1, #myCarousel2 {
+    width: 50%;
     height: 200px;
     margin-left: 5%;
     margin-top: 1%;
 }
 
+.bildspel {
+    margin-top: 5%;
+}
 .carousel-control.right {
     background-image: linear-gradient(to right,rgba(0,0,0,.0) 0,rgba(0,0,0,.0) 100%); 
 }
@@ -29,7 +32,7 @@
 .carousel-inner>.item>img {
     width: 60%;
     height: 100%;
-    margin-left: 20%;
+    margin-left: 5%;
 }
 
 #logga {
@@ -48,12 +51,13 @@
     margin-bottom: 1%;
 }
 
-#popular {
+.popular {
     font-family: 'Lobster', cursive;
     font-style: bold;
     margin-bottom: 0;
     margin-left: 10%;
     margin-top: 9%;
+    text-align: center;
 }
 
 #navigation {
@@ -66,7 +70,7 @@
 }
 
 .footer {
-    position: relative;
+    position: absolute;
     bottom: 0;
     width: 100%;
     background-color: #f5f5f5;
