--- a/Template/index.html
+++ b/Template/index.html
@@ -23,7 +23,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Koholo.com</a>
+      <a id="brandname" class="navbar-brand" href="index.html">Koholo.com</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
