--- a/Template/index.html
+++ b/Template/index.html
@@ -31,7 +31,7 @@
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Kontakt<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Kontakta oss</a></li>
+            <li><a href="contact.html">Kontakta oss</a></li>
             <li><a href="#">För företag</a></li>
             <li><a href="#">För privatpersoner</a></li>
           </ul>
