--- a/Template/index.html
+++ b/Template/index.html
@@ -5,11 +5,14 @@
     <title>Koholo.com</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
 </head>
     
 <body>
@@ -73,111 +76,61 @@
         </div>
 	</div>
 </div>
-<div class="row">
-    <div align="center" class="bildspel col-md-4">
-    <h2 class="popular">Populära butiker</h2>
-    <div id="myCarousel1" class="carousel slide" data-ride="carousel">
-  
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img src="mq.jpg" alt="MQ">
-    </div>
-
-    <div class="item">
-      <img src="jc.jpg" alt="JC">
-    </div>
-
-    <div class="item">
-      <img src="hm.png" alt="HM">
-    </div>
-
-    <div class="item">
-      <img src="ahlens.gif" alt="Åhlens">
-    </div>
-  </div>
-
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel1" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel1" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+    <div class="container">
+  <h2 class="popular">Populära butiker</h2>
+      <div class="slider center">       
+          <div class="slide">
+            <div class="cl cl-yellow"></div>
+          </div>
+          <div class="slide">
+            <div class="cl cl-blue"></div>
+          </div>
+          <div class="slide">
+            <div class="cl cl-red"></div>
+          </div>
+        <div class="slide">
+            <div class="cl cl-yellow"></div>
+          </div>
+          <div class="slide">
+            <div class="cl cl-blue"></div>
+          </div>
+          <div class="slide">
+            <div class="cl cl-red"></div>
+          </div>
+          
+      </div>
+      <div class="pagination"></div>
 </div>
-    </div>
-    <div align="center" class="bildspel col-md-4">
-    <h2 class="popular">Rekommenderade butiker</h2>
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-  
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img src="mq.jpg" alt="MQ">
-    </div>
-
-    <div class="item">
-      <img src="jc.jpg" alt="JC">
-    </div>
-
-    <div class="item">
-      <img src="hm.png" alt="HM">
-    </div>
-
-    <div class="item">
-      <img src="ahlens.gif" alt="Åhlens">
-    </div>
-  </div>
-
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-    </div>
-    <div align="center" class="bildspel col-md-4">
-    <h2 class="popular">Populära produkter</h2>
-    <div id="myCarousel2" class="carousel slide" data-ride="carousel">
-  
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img src="mq.jpg" alt="MQ">
-    </div>
-
-    <div class="item">
-      <img src="jc.jpg" alt="JC">
-    </div>
-
-    <div class="item">
-      <img src="hm.png" alt="HM">
-    </div>
-
-    <div class="item">
-      <img src="ahlens.gif" alt="Åhlens">
-    </div>
-  </div>
-
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel2" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel2" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-    </div>
-        </div>
     
+    <div class="container">
+  <h2 class="popular">Populära butiker</h2>
+      <div class="slider center">       
+          <div class="slide">
+            <div class="cl cl-yellow"></div>
+          </div>
+          <div class="slide">
+            <div class="cl cl-blue"></div>
+          </div>
+          <div class="slide">
+            <div class="cl cl-red"></div>
+          </div>
+        <div class="slide">
+            <div class="cl cl-yellow"></div>
+          </div>
+          <div class="slide">
+            <div class="cl cl-blue"></div>
+          </div>
+          <div class="slide">
+            <div class="cl cl-red"></div>
+          </div>
+          
+      </div>
+      <div class="pagination"></div>
+</div>
+        
     <footer id="sidfot" class="footer">
         <p id="copyright">Presenteras av Koholo Shopping Network © 2016 koholo.com. Alla rättigheter förbehållna</p>
     </footer>
-
+    <script src="script.js"></script>
 </body>
 </html>
