--- a/Template/main.css
+++ b/Template/main.css
@@ -1,39 +1,55 @@
 /*Simons CSS för startsida och bas design för resten av sidan*/
-#myCarousel, #myCarousel1, #myCarousel2 {
-    width: 50%;
-    height: 200px;
-    margin-left: 5%;
-    margin-top: 1%;
+
+.slick-prev:before, .slick-next:before { 
+    color: #68979B !important;
 }
 
-.bildspel {
-    margin-top: 5%;
-}
-.carousel-control.right {
-    background-image: linear-gradient(to right,rgba(0,0,0,.0) 0,rgba(0,0,0,.0) 100%); 
+.container { 
+  padding: 50px; 
 }
 
-.carousel-control.left {
-    background-image: linear-gradient(to right,rgba(0,0,0,.0) 0,rgba(0,0,0,.0) 100%); 
+.cl {
+  height:200px;
+  padding:10px;
 }
 
-.carousel-inner>.item>img {
-    margin-top: 10%;
+.cl-yellow { 
+  background: #73AC96; 
 }
 
-.glyphicon-chevron-right {
-    color: #417C81;
+.cl-blue { 
+  background: #417C81; 
 }
 
-.glyphicon-chevron-left {
-    color: #417C81;
+.cl-red { 
+  background: #68979B; 
 }
 
+.slick-active { 
+  padding: 20px 0; 
+}
 
-.carousel-inner>.item>img {
-    width: 60%;
-    height: 100%;
-    margin-left: 5%;
+.slick-center { 
+  transform: scale(1.08) 
+}
+
+.slick-slide:not(.slick-active) { 
+  margin: 20px 0; 
+}
+
+.child { 
+  width:100%; 
+}
+
+.slide:not(.slick-active) { 
+  cursor: pointer; 
+}
+
+.pagination {
+  text-align: center; 
+  color: $white;
+  font-family: $raleway;
+  font-size: 1.2rem;
 }
 
 #logga {
@@ -56,8 +72,7 @@
     font-family: 'Lobster', cursive;
     font-style: bold;
     margin-bottom: 0;
-    margin-left: 10%;
-    margin-top: 9%;
+    margin-top: 5%;
     text-align: center;
 }
 
