--- a/Template/index.html
+++ b/Template/index.html
@@ -36,10 +36,10 @@
           <ul class="dropdown-menu">
             <li><a href="contact.html">Kontakta oss</a></li>
             <li><a href="#">För företag</a></li>
-            <li><a href="#">För privatpersoner</a></li>
           </ul>
         </li>
         <li><a href="#">Om oss</a></li>
+        <li><a href="#">Butiker</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="register.html"><span class="glyphicon glyphicon-user"></span> Registrera dig</a></li>
