--- a/Template/index.html
+++ b/Template/index.html
@@ -38,6 +38,7 @@
             <li><a href="#">För företag</a></li>
           </ul>
         </li>
+        <li><a href="how-to.html">Så här funkar det</a></li>
         <li><a href="#">Om oss</a></li>
         <li><a href="#">Butiker</a></li>
       </ul>
