--- a/Template/Login.html
+++ b/Template/Login.html
@@ -23,7 +23,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="index.html">Koholo.com</a>
+      <a id="brandname" class="navbar-brand" href="index.html">Koholo.com</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -33,10 +33,11 @@
           <ul class="dropdown-menu">
             <li><a href="contact.html">Kontakta oss</a></li>
             <li><a href="#">För företag</a></li>
-            <li><a href="#">För privatpersoner</a></li>
           </ul>
         </li>
+        <li><a href="how-to.html">Så här funkar det</a></li>
         <li><a href="#">Om oss</a></li>
+        <li><a href="#">Butiker</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="register.html"><span class="glyphicon glyphicon-user"></span> Registrera dig</a></li>
@@ -44,7 +45,7 @@
       </ul>
     </div>
   </div>
-</nav>
+ </nav>
   
 <div class="container">
     <section class="site-container padding-tb">
