--- a/Template/register.html
+++ b/Template/register.html
@@ -15,37 +15,39 @@
 </head>
 
 <body>
-<h1 id="logga">koholo.com</h1>
-<h2 id="logtext">...let's go shopping</h2>
+    <h1 id="logga">koholo.com</h1>
+    <h2 id="logtext">...let's go shopping</h2>
 <nav id="navigation" class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">Koholo.com</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
-            <ul class="nav navbar-nav">
-                <li><a href="/">Hem</a></li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">Kontakt<span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="contact_us">Kontakta oss</a></li>
-                        <li><a href="contact_company">För företag</a></li>
-                    </ul>
-                </li>
-                <li><a href="about">Om oss</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                                    <li><a href="register"><span class="glyphicon glyphicon-user"></span> Registrera dig</a></li>
-                    <li><a href="login"><span class="glyphicon glyphicon-log-in"></span> Logga in</a></li>
-                            </ul>
-        </div>
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a id="brandname" class="navbar-brand" href="index.html">Koholo.com</a>
     </div>
-</nav>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li><a href="index.html">Hem</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Kontakt<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="contact.html">Kontakta oss</a></li>
+            <li><a href="#">För företag</a></li>
+          </ul>
+        </li>
+        <li><a href="how-to.html">Så här funkar det</a></li>
+        <li><a href="#">Om oss</a></li>
+        <li><a href="#">Butiker</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="register.html"><span class="glyphicon glyphicon-user"></span> Registrera dig</a></li>
+        <li><a href="Login.html"><span class="glyphicon glyphicon-log-in"></span> Logga in</a></li>
+      </ul>
+    </div>
+  </div>
+ </nav>
     <!-- navbar -->
 
     <div class="container">
