--- a/Template/Login.html
+++ b/Template/Login.html
@@ -76,37 +76,36 @@
 			        </div>
 			    </div>
 			</form>
-			<div class="text-center text-small wow fadeInLeft" data-wow-delay="0.8s"><a href="#" class="modal__toggle">Glömt lösenordet?</a></div>
+
+        <div class="text-center text-small wow fadeInLeft" data-wow-delay="0.8s"><button type="button" id="termsButton" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#ForgotPassword">Glömt lösenordet?</button>
+        </div>
 			 
-			<div class="modal">
-				<a href="#" class="modal--close modal__toggle">&times;</a>
-				
-				<h3>Återställ lösenord</h3>
-
-				<p class="text-small">Ditt nya lösenord kommer skickas till denna mailadress.</p>
-
-				<form action="#" class="form2" method="post">
-				    <div class="form__wrapper">
-				        <input type="email" class="form__input" id="email" name="email">
-				        <label class="form__label" for="email">
-							<span class="form__label-content">Email</span>
-						</label>
-				    </div>
-
-					<div class="form__wrapper--submit">
-				    	<div class="form__input-submit">
-				        	<button type="submit" name="submit" class="btn btn-block">Skicka</button>
-				        </div>
-				    </div>
-
-			    </form>
-
-			</div><!-- /modal -->
-
-		</section><!-- /card -->
-
-
-			</section><!-- /site-container -->
+        <div class="modal fade" id="ForgotPassword" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+<h4 class="modal-title" id="myModalLabel">Återställ lösenord</h4>
+                        </div>
+        
+            <div class="modal-body">
+                <form action="#" class="form2" method="post">
+                    <div class="form__wrapper">
+                            <input type="email" class="form__input" id="email" name="email">
+                            <label class="form__label" for="email">
+                                <span class="form__label-content">Email</span>
+                            </label>
+                        <p class="text-small">Ditt nya lösenord kommer skickas till denna mailadress.</p>
+                    </div>
+                        <div class="form__wrapper--submit">
+                            <div class="form__input-submit">
+                                <button type="submit" name="submit" class="btn btn-block">Skicka</button>
+                            </div>
+                        </div>
+                 </form>
+            </div>
+        </section><!-- /card -->
+    </section><!-- /site-container -->
 </div>
     
     <footer id="sidfot" class="footer">
