Lagt till logga i sidhuvudet och ändrat färger

--- a/Template/index.html
+++ b/Template/index.html
@@ -16,8 +16,10 @@
 </head>
     
 <body>
-    <h1 id="logga">koholo.com</h1>
-    <h2 id="logtext">...let's go shopping</h2>
+    <div id="logga">
+        <img src="logo-koholo.png">
+    </div>
+    
 <nav id="navigation" class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -78,7 +80,7 @@
 	</div>
 </div>
     <div class="container">
-  <h2 class="popular">Populära butiker</h2>
+  <h2 class="popular">Populära produkter</h2>
       <div class="slider center">       
           <div class="slide">
             <div class="cl cl-yellow"></div>
