--- a/Template/register.html
+++ b/Template/register.html
@@ -15,8 +15,9 @@
 </head>
 
 <body>
-    <h1 id="logga">koholo.com</h1>
-    <h2 id="logtext">...let's go shopping</h2>
+    <div id="logga">
+        <img src="logo-koholo.png">
+    </div>
 <nav id="navigation" class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
