Lagt till About.Html
Skapat About.html
Uppdaterat Meny länkar

--- a/Template/about.html
+++ b/Template/about.html
@@ -49,29 +49,22 @@
  </nav>
     
     <div class="container">
-        <h2 id="how-to-h2">Så här funkar det...</h2>
+        <h2 id="abouth2">Om Koholo</h2>
             <div class="col-sm-8">
-                <h4>ONLINE SHOPPING - enkelt och bekvämt</h4>
+                <h4>En webbutik åt alla!</h4>
+                <h5>Vår ambition är att ALLA ska ha en egen nätbutik, både privatpersoner och butiksägare. Målet är att skapa Sveriges mest kompletta shoppingportal.</h5>
             </div>
-        <div class="col-sm-7">
-            <section>Koholos ambition är att ALLA ska ha en egen nätbutik, både privatpersoner och butiksägare. Målet är att du som shoppare alltid ska hitta det du söker efter. Idag finner du hundratals butiker från hela världen med totalt 4.097.368 produkter att välja bland. Koholo består av:</section>
+        <div class="about-section col-sm-8">
+            <section>Koholo startade 2007 under namnet AllaWebbShoppar och med ambitionen att erbjuda en webbutik åt både privatpersoner såväl som för företag. Visionen är att ALLA ska kunna vara med i portalen. Här ska du hitta produkter från världens alla hörn men även kunna se vad din granne erbjuder.</section>
         </div>
         
-        <div class="col-sm-7">
-            <section class="how-to-Section text-left"><strong>Extern del med online shoppingportal: </strong> Sök efter en produkt direkt i sökrutan tillsammans med en branschkategori eller kombinera dessa med den utökade sökningen. Använd de geografiska sökvalen om du vill se vad dina lokala butiker eller kanske din granne erbjuder. När du hittat produkten du är intresserad av besöker du dess interna e-butik för mer information och för att beställa den. Letar du efter en speciell butik inom en viss bransch så använder du sökmotorn för butiker istället. </section>
-        </div>
-    
-        <div class="col-sm-7">
-            <section class="how-to-Section text-left"><strong>Interna e-butiker: </strong> Varje butik på sajten har en egen intern webbutik. I denna kan du antingen beställa produkten och lägga order via varukorgen eller gå direkt till webbbutikens ordinarie produktsida och lägga ordern där. Om du beställer produkten via Koholo så informerar butiken om fraktkostnader och om hur betalning sker antingen i den interna butiken eller genom att kontakta dig efter din beställning. </section>
+        <div class="about-section col-sm-8">
+            <section>Idag är Koholo en av Sveriges största shoppingportaler med 4.139.668 produkter. Med bra sökfunktionalitet, användarvänligt gränssnitt och alltid gratis för privatpersoner ska vi nå vår vision, eller i alla fall komma en bra bit på väg...</section>
         </div>
         
-        <div class="col-sm-7">
-            <section class="how-to-Section text-left"><strong>Kundadmin: </strong> Här administrerar butiken sina egna produkter och sidor. Läs mer om hur du blir butiksägare på Om Oss</section>
-        </div>
-        
-<!--Div skapad om det ska läggas in samma bild som finns just nu på "Såhär funkar det"-->
-        <div id="howPicture">
-            <img>
+        <!--Om bild på ägare ska läggas in-->
+        <div class="about-section col-sm-8">
+            <h4>--Om bild ska läggas till kommer den vara här eller höger om paragraferna--</h4>
         </div>
         
     </div> 
