--- a/Template/register.html
+++ b/Template/register.html
@@ -39,7 +39,7 @@
           </ul>
         </li>
         <li><a href="how-to.html">Så här funkar det</a></li>
-        <li><a href="#">Om oss</a></li>
+        <li><a href="about.html">Om oss</a></li>
         <li><a href="#">Butiker</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
