La in Kalles CompanyHTML
Uppdaterat Menyn
La in Company HTML

--- a/Template/register.html
+++ b/Template/register.html
@@ -35,7 +35,7 @@
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Kontakt<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="contact.html">Kontakta oss</a></li>
-            <li><a href="#">För företag</a></li>
+            <li><a href="Company.html">För företag</a></li>
           </ul>
         </li>
         <li><a href="how-to.html">Så här funkar det</a></li>
