--- a/Template/Login.html
+++ b/Template/Login.html
@@ -33,7 +33,7 @@
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Kontakt<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="contact.html">Kontakta oss</a></li>
-            <li><a href="#">För företag</a></li>
+            <li><a href="Company.html">För företag</a></li>
           </ul>
         </li>
         <li><a href="how-to.html">Så här funkar det</a></li>
@@ -92,7 +92,7 @@
             <div class="modal-body">
                 <form action="#" class="form2" method="post">
                     <div class="form__wrapper">
-                            <input type="email" class="form__input" id="email" name="email">
+                            <input type="email" required class="form__input" id="email" name="email">
                             <label class="form__label" for="email">
                                 <span class="form__label-content">Email</span>
                             </label>
