--- a/Template/Company.html
+++ b/Template/Company.html
@@ -49,19 +49,21 @@
  </nav>
   
     <div class="container">
-        <h1>En marknadsplats för stora och små</h1>
+    <h2 id="companyh2">För företag...</h2>
+        
+        <h3>En marknadsplats för stora och små</h3>
             <p>Koholo erbjuder etablerade e-butiker en anslutning av produkter till en marknadsplats tillsammans med välkända men även mindre etablerade varumärken. Koholo
 	är öppen för butiker i alla storlekar men särskilt de lite mindre då de ofta har ett mer specialiserat produktsortiment som är attraktivt för köpare.</p>
 	       <p>Du väljer själv om du vill att affären ska genomföras direkt på Koholo eller om du hellre vill generera trafik till din ordinarie webbutiks produktsida. Samtliga butiks- och
 	produktsidor är sökmotoroptimerade vilket stärker butikens representation på webben och därmed din ordinarie webbutiks placering i sökmotorer.</p>
-	<h1>Så här kommer du igång</h1>
+	<h3>Så här kommer du igång</h3>
 	       <p>Efter din registrering loggas du direkt in i admin där du fyller i dina butiksuppgifter. Här finns en instruktion hur du exporterar dina produkter från din befintliga e-butik till en
 	prisfil som läggs på din server. När vi läser in dina produkter hamnar de i din interna butik hos oss och är därmed synliga i portalen. Denna fil läser vi in
 	regelbundet vilket gör att ditt sortiment alltid är uppdaterat i fall du gjort förändringar i det. Exporten av dina produkter till en prisfil tar inte mer än fem minuter och
 	är en enkel process för dig eller den som byggt din e-butik. Du har alltid möjlighet att ringa oss så hjälper vi dig att komma igång. <a href="register.html">»
 	Registrera dig här</a></p>
     
-	<h1>Detta ingår i din nätbutik (PRO)</h1>
+	<h3>Detta ingår i din nätbutik (PRO)</h3>
         <ul>
             <li>Medverkan i en välbesökt shoppingportal</li>
             <li>Alla dina sidor är sökmotoroptimerade</li>
@@ -79,7 +81,7 @@
             <li>E-post- & <span style="color:Red;">Telefonsupport*</span></li>
         </ul>
 	<span style="color:Red;font-size:10px;">* Utöver produktnivå BAS för privatpersoner</span>
-    <h1>Priser för produktnivå PRO</h1>
+    <h3>Priser för produktnivå PRO</h3>
 	   <p>3 år: 8 400 kr<br>2 år: 6 400 kr<br>1 år: 3 900 kr</p> <br>
 
 
