--- a/Template/main.css
+++ b/Template/main.css
@@ -231,24 +231,16 @@
     margin-top: 10px;
 }
 
+/*Khaleds CSS//CSS för Company.html, bas-design ärvs från ovan*/
+
+#companyh2{
+    font-family: 'Lobster', cursive;
+}
+
 /*Khaleds CSS//CSS för Login.html, bas-design ärvs från ovan*/
 #loginH3{
     font-family: 'Lobster', cursive;
     color: black;
-}
-
-h3{
-    color: red;
-    font-size: 40px;
-    font-weight: normal;
-    margin-bottom: 22px;
-    margin-top: 0px;
-	display: block;
-    -webkit-margin-before: 1em;
-    -webkit-margin-after: 1em;
-    -webkit-margin-start: 0px;
-    -webkit-margin-end: 0px;
-
 }
 
 /* Basic Reset */
