--- a/Template/products.html
+++ b/Template/products.html
@@ -50,10 +50,37 @@
       </ul>
     </div>
   </div>
+    
  </nav>
-     
+        <div id="sfdiv" class="col-xs-8 col-xs-offset-2">
+		    <div id = "searchF" class="input-group">
+                <div class="input-group-btn search-panel">
+                    <button type="button" id="categorybtn" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                    	<span id="search_concept">Kategori</span> <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu" role="menu">
+                      <li><a href="#contains">Contains</a></li>
+                      <li><a href="#its_equal">It's equal</a></li>
+                      <li><a href="#greather_than">Greather than ></a></li>
+                      <li><a href="#less_than">Less than</a></li>
+                      <li class="divider"></li>
+                      <li><a href="#all">Anything</a></li>
+                    </ul>
+                </div>
+                <input type="hidden" name="search_param" value="all" id="search_param">         
+                <input type="text" class="form-control" name="x" placeholder="Sök produkt...">
+                <span class="input-group-btn">
+                    <button id ="searchbtn" class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
+                </span>
+            </div>
+        </div>
+            <div id="sortering" class="col-xs-8 col-xs-offset-2">        </div>
+
+
+    
 
 <div id ="ProductWrapper" >
+    
    
         <div class="ProductDiv col-md-2">
             <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/80APZS6SUS_89384197_front.jpg">
