--- a/Template/main1.css
+++ b/Template/main1.css
@@ -75,19 +75,7 @@
     color: white;
 }
 
-.footer {
-     
-    position: relative;
-    height: 5%;
-    width: 100%;
-    background-color: #f5f5f5;
-    display: block;
-    box-sizing: border-box;
-    text-align: center;
-    font-style: bold;
-    height: 5%;
-    font-size: 80%;
-}
+
 
 #copyright {
     margin-top: 1%;
@@ -473,6 +461,62 @@ p {
 }
 
 
+
+
+.footer {
+     
+    margin-top:15%;
+    width: 100%;
+    background-color: #f5f5f5;
+    display: block;
+    box-sizing: border-box;
+    text-align: center;
+    font-style: bold;
+    height: 5%;
+    font-size: 80%;
+}
+
+
+
+#sortering{
+    
+    height:5%;
+    box-shadow:0px 0px 1px;
+    margin-bottom:1%;
+    
+}
+
+#filter{
+    
+    height:50px;
+    
+     box-shadow:0px 0px 1px;
+    
+    
+    
+    
+}
+
+
+
+#sfdiv{
+    
+    
+   height:100px;
+    
+    
+}
+
+#searchF{
+    
+    width:50%;
+    margin-left:25%;
+    
+    
+}
+
+
+
 html, body {
     height: 100%;
 }
@@ -480,7 +524,7 @@ html, body {
 
 #ProductWrapper{
     
-    min-height: 95%;
+    min-height: 85%;
   
     
  
