--- a/Template/Login.html
+++ b/Template/Login.html
@@ -36,7 +36,7 @@
             <li><a href="Company.html">För företag</a></li>
           </ul>
         </li>
-        <li><a href="how-to.html">Så här funkar det</a></li>
+        <li><a href="how-to.html">Shoppa</a></li>
         <li><a href="about.html">Om oss</a></li>
         <li><a href="#">Butiker</a></li>
       </ul>
