--- a/Template/index.html
+++ b/Template/index.html
@@ -9,6 +9,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
@@ -51,7 +52,18 @@
     </div>
   </div>
  </nav>
-   
+    <div class="container">
+    <div class="text-center">
+                    <ul class="social-network social-circle">
+                        <li><a href="#" class="icoInsta" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a></li>
+                        <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+            </div>
+				</div>
+        </div>
     <div class="container">
     <div class="row">
         <h1 id="searchhead">Sök efter produkter här...</h1>
@@ -79,9 +91,9 @@
         </div>
 	</div>
 </div>
-    <div class="container">
+    <div id="slides" class="container">
   <h2 class="popular">Populära produkter</h2>
-      <div class="slider center">       
+      <div class="slider center col-md-10 col-md-offset-1">       
           <div class="slide">
             <div class="cl cl-yellow"></div>
           </div>
@@ -102,12 +114,11 @@
           </div>
           
       </div>
-      <div class="pagination"></div>
 </div>
     
     <div class="container">
   <h2 class="popular">Populära butiker</h2>
-      <div class="slider center">       
+      <div class="slider center col-md-10 col-md-offset-1">       
           <div class="slide">
             <div class="cl cl-yellow"></div>
           </div>
@@ -128,7 +139,6 @@
           </div>
           
       </div>
-      <div class="pagination"></div>
 </div>
         
     <footer id="sidfot" class="footer">
