--- a/Template/main.css
+++ b/Template/main.css
@@ -1,15 +1,93 @@
 /*Simons CSS för startsida och bas design för resten av sidan*/
+.social-circle > li > a {
+    background-color: lightgray;
+}
+
+ul.social-network {
+	list-style: none;
+	display: inline;
+	padding: 0;
+}
+ul.social-network li {
+    text-align: center;
+	display: inline;
+	margin: 0 3px;
+}
+
+.social-network a.icoInsta:hover {
+	background-color: #e95950;
+}
+.social-network a.icoFacebook:hover {
+	background-color:#3B5998;
+}
+.social-network a.icoTwitter:hover {
+	background-color:#33ccff;
+}
+.social-network a.icoGoogle:hover {
+	background-color:#BD3518;
+}
+.social-network a.icoVimeo:hover {
+	background-color:#0590B8;
+}
+.social-network a.icoLinkedin:hover {
+	background-color:#007bb7;
+}
+.social-network a.icoRss:hover i, .social-network a.icoFacebook:hover i, .social-network a.icoTwitter:hover i,
+.social-network a.icoGoogle:hover i, .social-network a.icoVimeo:hover i, .social-network a.icoLinkedin:hover i, {
+	color:#fff;
+}
+a.socialIcon:hover, .socialHoverClass {
+	color:#44BCDD;
+}
+
+.social-circle li a {
+	display:inline-block;
+	position:relative;
+	margin:0 auto 0 auto;
+	-moz-border-radius:50%;
+	-webkit-border-radius:50%;
+	border-radius:50%;
+	text-align:center;
+	width: 50px;
+	height: 50px;
+	font-size:20px;
+}
+.social-circle li i {
+	margin:0;
+	line-height:50px;
+	text-align: center;
+}
+
+.social-circle li a:hover i, .triggeredHover {
+	-moz-transform: rotate(360deg);
+	-webkit-transform: rotate(360deg);
+	-ms--transform: rotate(360deg);
+	transform: rotate(360deg);
+	-webkit-transition: all 0.2s;
+	-moz-transition: all 0.2s;
+	-o-transition: all 0.2s;
+	-ms-transition: all 0.2s;
+	transition: all 0.2s;
+}
+.social-circle i {
+	color: #fff;
+	-webkit-transition: all 0.8s;
+	-moz-transition: all 0.8s;
+	-o-transition: all 0.8s;
+	-ms-transition: all 0.8s;
+	transition: all 0.8s;
+}
+
+.social-network social-circle < a {
+ background-color: #D3D3D3;   
+}
 
 .slick-prev:before, .slick-next:before { 
     color: #68979B !important;
 }
 
-.container { 
-  padding: 50px; 
-}
-
 .cl {
-  height:200px;
+  height:150px;
   padding:10px;
 }
 
@@ -45,13 +123,6 @@
   cursor: pointer; 
 }
 
-.pagination {
-  text-align: center; 
-  color: $white;
-  font-family: $raleway;
-  font-size: 1.2rem;
-}
-
 #logga {
     text-align: center;
     margin-top: 1%;
@@ -62,7 +133,7 @@
     font-family: 'Lobster', cursive;
     font-style: bold;
     margin-bottom: 0;
-    margin-top: 5%;
+    margin-top: 2%;
     text-align: center;
 }
 
@@ -93,6 +164,7 @@
 }
 
 #searchhead {
+    margin-top: 5%;
     text-align: center;
     font-family: 'Lobster', cursive;
     font-style: bold;
