--- a/Template/products.html
+++ b/Template/products.html
@@ -74,12 +74,19 @@
                 </span>
             </div>
         </div>
-            <div id="sortering" class="col-xs-8 col-xs-offset-2">        </div>
-
-
     
+    
+    <ul id="filter" class="nav nav-tabs">
+        <li class="active"><a href="#">Sortera efter:</a></li>
+        <li><a href="#">Bokstavsordning</a></li>
+        <li><a href="#">Pris</a></li>
+                   
+    </ul>
+
 
 <div id ="ProductWrapper" >
+    
+             
     
    
         <div class="ProductDiv col-md-2">
