Ändrade igen cuz I can
Come at me

--- a/Template/products.html
+++ b/Template/products.html
@@ -74,15 +74,15 @@
                 </span>
             </div>
         </div>
-    
-    
-    <ul id="filter" class="nav nav-tabs">
-        <li class="active"><a href="#">Sortera efter:</a></li>
-        <li><a href="#">Bokstavsordning</a></li>
-        <li><a href="#">Pris</a></li>
-                   
-    </ul>
-
+<div id = "dropcontainer"><div class="dropdown1">
+  <button class="dropbtn">Filtrera efter:</button>
+  <div class="dropdown-content">
+    <a href="#">Bokstavsordning</a>
+    <a href="#">Pris</a>
+    <a href="#">Senast tillagd</a>
+  </div>
+</div>
+</div>
 
 <div id ="ProductWrapper" >
     
