--- a/Template/main1.css
+++ b/Template/main1.css
@@ -464,7 +464,7 @@ p {
 
 
 .footer {
-     
+    clear:both;
     margin-top:5%;
     width: 100%;
     background-color: #f5f5f5;
@@ -525,7 +525,7 @@ html, body {
 #ProductWrapper{
     
     min-height: 85%;
-    margin-top:10%;
+    margin-top:10px;
     clear:both;
  
 }
@@ -664,5 +664,60 @@ html, body {
 }
 
 
+/* dropdown-menu-style
 
 
+*/
+
+#dropcontainer{
+    margin-top:120px;
+    width:100%;
+    height:55px;
+ 
+ box-shadow: 0 10px 10px -10px;
+    
+}
+
+.dropbtn {
+    
+  background-color:#417C81;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown1 {
+    position: relative;
+    display: inline-block;
+    margin-left:5%;
+    float:left;
+    
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    
+}
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown1:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown1:hover .dropbtn {
+    background-color: #3e8e41;
+}
