--- a/Template/index.html
+++ b/Template/index.html
@@ -33,7 +33,6 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li><a href="index.html">Hem</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Kontakt<span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -41,7 +40,7 @@
             <li><a href="Company.html">För företag</a></li>
           </ul>
         </li>
-        <li><a href="how-to.html">Shoppa</a></li>
+        <li><a href="how-to.html">Att shoppa</a></li>
         <li><a href="about.html">Om oss</a></li>
         <li><a href="#">Butiker</a></li>
       </ul>
@@ -63,7 +62,7 @@
                     </ul>
             </div>
 				</div>
-        </div>
+
     <div class="container">
     <div class="row">
         <h1 id="searchhead">Sök efter produkter här...</h1>
@@ -109,7 +108,7 @@
                                         <dl class="row">
                                             <dt class="col-sm-4">miles davis</dt>
                                             <dd class="col-sm-8">Matchar sökord i produktnamn eller produktbeskrivning.
-Träff på produktnamn visas överst.</dd>
+                                                Träff på produktnamn visas överst.</dd>
                                             <dt class="col-sm-4">miles davis remaster*</dt>
                                             <dd class="col-sm-8">Matchar även ord med remaster inklusive ändelser som t ex remastered.</dd>
                                             <dt class="col-sm-4">miles davis -remastered</dt>
@@ -130,7 +129,7 @@ Träff på produktnamn visas överst.</dd>
 </div>
 </div>
     <div id="slides" class="container">
-  <h2 class="popular">Populära produkter</h2>
+  <h3 class="popular">Populära produkter</h3>
       <div class="slider center col-md-10 col-md-offset-1">       
           <div class="slide">
             <div class="cl cl-yellow"></div>
@@ -155,7 +154,7 @@ Träff på produktnamn visas överst.</dd>
 </div>
     
     <div class="container">
-  <h2 class="popular">Populära butiker</h2>
+  <h3 class="popular">Populära butiker</h3>
       <div class="slider center col-md-10 col-md-offset-1">       
           <div class="slide">
             <div class="cl cl-yellow"></div>
@@ -177,15 +176,10 @@ Träff på produktnamn visas överst.</dd>
           </div>
           
       </div>
-<<<<<<< HEAD
 </div>
-=======
-      <div class="pagination"></div>
-    </div>
-   
->>>>>>> origin/master
-        
-    <footer id="sidfot" class="footer">
+
+
+   <footer id="sidfot" class="footer">
         <p id="copyright">Presenteras av Koholo Shopping Network © 2016 koholo.com. Alla rättigheter förbehållna</p>
     </footer>
     <script src="script.js"></script>
