--- a/Template/index.html
+++ b/Template/index.html
@@ -18,7 +18,7 @@
     
 <body>
     <div id="logga">
-        <img src="logo-koholo.png">
+        <img id="logo" src="logo-koholo.png">
     </div>
     
 <nav id="navigation" class="navbar navbar-inverse">
@@ -52,21 +52,9 @@
   </div>
  </nav>
     <div class="container">
-    <div class="text-center">
-                    <ul class="social-network social-circle">
-                        <li><a href="#" class="icoInsta" title="Instagram"><i class="fa fa-instagram"></i></a></li>
-                        <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a></li>
-                        <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
-            </div>
-				</div>
-
-    <div class="container">
     <div class="row">
         <h1 id="searchhead">Sök efter produkter här...</h1>
-        <div class="col-xs-8 col-xs-offset-2">
+        <div class="col-xs-6 col-xs-offset-3">
 		    <div class="input-group">
                 <div class="input-group-btn search-panel">
                     <button type="button" id="categorybtn" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
@@ -177,7 +165,17 @@
           
       </div>
 </div>
-
+<div class="container">
+    <div class="text-center">
+                    <ul class="social-network social-circle">
+                        <li><a href="#" class="icoInsta" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a></li>
+                        <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+            </div>
+				</div>
 
    <footer id="sidfot" class="footer">
         <p id="copyright">Presenteras av Koholo Shopping Network © 2016 koholo.com. Alla rättigheter förbehållna</p>
