--- a/Template/products.html
+++ b/Template/products.html
@@ -40,7 +40,7 @@
             <li><a href="Company.html">För företag</a></li>
           </ul>
         </li>
-        <li><a href="how-to.html">Så här funkar det</a></li>
+        <li><a href="how-to.html">Att shoppa</a></li>
         <li><a href="about.html">Om oss</a></li>
         <li><a href="#">Butiker</a></li>
       </ul>
