--- a/Template/index.html
+++ b/Template/index.html
@@ -60,13 +60,33 @@
                     <button type="button" id="categorybtn" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                     	<span id="search_concept">Kategori</span> <span class="caret"></span>
                     </button>
-                    <ul class="dropdown-menu" role="menu">
-                      <li><a href="#contains">Contains</a></li>
-                      <li><a href="#its_equal">It's equal</a></li>
-                      <li><a href="#greather_than">Greather than ></a></li>
-                      <li><a href="#less_than">Less than</a></li>
-                      <li class="divider"></li>
-                      <li><a href="#all">Anything</a></li>
+                    <ul class="dropdown-menu scrollable-menu" role="menu">
+                        <li value="Barn & Leksaker"><a>Barn & Leksaker</a></li>
+                        <li value="Böcker & Tidningar"><a>Böcker & Tidningar</a></li>
+                        <li value="Bygg & Renovering"><a>Bygg & Renovering</a></li>
+                        <li value="Djur"><a>Djur</a></li>
+                        <li value="Elektronik & Datorer"><a>Elektronik & Datorer</a></li>
+                        <li value="Film, Musik & Spel"><a>Film, Musik & Spel</a></li>
+                        <li value="Glasögon & Linser"><a>Glasögon & Linser</a></li>
+                        <li value="Hälsa & Skönhet"><a>Hälsa & Skönhet</a></li>
+                        <li value="Hem & Trädgård"><a>Hem & Trädgård</a></li>
+                        <li value="Hobby & Musikinstrument"><a>Hobby & Musikinstrument</a></li>
+                        <li value="Industri & Verktyg"><a>Industri & Verktyg</a></li>
+                        <li value="Internetvaruhus"><a>Internetvaruhus</a></li>
+                        <li value="Kläder & Mode"><a>Kläder & Mode</a></li>
+                        <li value="Konst & Hantverk"><a>Konst & Hantverk</a></li>
+                        <li value="Kontor & Skola"><a>Kontor & Skola</a></li>
+                        <li value="Mat, Dryck & Tobak"><a>Mat, Dryck & Tobak</a></li>
+                        <li value="Mobil & Telefoni"><a>Mobil & Telefoni</a></li>
+                        <li value="Motor & Transport"><a>Motor & Transport</a></li>
+                        <li value="Övrigt"><a>Övrigt</a></li>
+                        <li value="Presenter & Upplevelser"><a>Presenter & Upplevelser</a></li>
+                        <li value="Resor & Biljetter"><a>Resor & Biljetter</a></li>
+                        <li value="Säkerhet & Trygghet"><a>Säkerhet & Trygghet</a></li>
+                        <li value="Samlev & Erotik"><a>Samlev & Erotik</a></li>
+                        <li value="Sport & Fritid"><a>Sport & Fritid</a></li>
+                        <li value="Tjänster"><a>Tjänster</a></li>
+                        <li value="Vitvaror & Hushållsprodukter"><a>Vitvaror & Hushållsprodukter</a></li>
                     </ul>
                 </div>
                 <input type="hidden" name="search_param" value="all" id="search_param">         
