--- a/Template/index.html
+++ b/Template/index.html
@@ -17,7 +17,7 @@
 </head>
     
 <body>
-    <div id="logga">
+    <div class="logga">
         <img id="logo" src="logo-koholo.png">
     </div>
     
