--- a/Template/main.css
+++ b/Template/main.css
@@ -1,4 +1,56 @@
 /*Simons CSS för startsida och bas design för resten av sidan*/
+
+#storelogo {
+    width: 5%;
+    height: 5%;
+}
+
+.storedescription {
+    font-family: 'Lobster', cursive;
+    text-align: center;
+}
+
+.storecategory {
+    color: darkgray;
+    text-align: center;
+}
+
+.storelink {
+    text-align: center;
+}
+.btn-primary {
+    background-color: #417C81;
+    border: none;
+}
+
+.btn-primary:hover {
+    background-color: #73AC96;
+}
+
+.dropdown.dropdown-lg .dropdown-menu {
+    margin-top: -1px;
+    padding: 6px 20px;
+}
+.input-group-btn .btn-group {
+    display: flex !important;
+}
+.btn-group .btn {
+    border-radius: 0;
+    margin-left: -1px;
+}
+.btn-group .btn:last-child {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+.btn-group .form-horizontal .btn[type="submit"] {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+.form-horizontal .form-group {
+    margin-left: 0;
+    margin-right: 0;
+}
 .social-circle > li > a {
     background-color: lightgray;
 }
@@ -124,7 +176,7 @@ a.socialIcon:hover, .socialHoverClass {
   cursor: pointer; 
 }
 
-#logga {
+.logga {
     text-align: center;
     margin-top: 1%;
     margin-bottom: 1%;
@@ -195,7 +247,7 @@ a.socialIcon:hover, .socialHoverClass {
     color: white;
     background-color: #417C81;
     border-color: #ccc;
-    width: 100%;
+    width: 90%;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     
