--- a/Template/store.html
+++ b/Template/store.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main1.css">
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
     <script type="text/javascript" src="slick/slick.min.js"></script>
@@ -64,9 +65,9 @@
     
     <div class="container">
 	<div class="row">
-		<div class="col-xs-6 col-xs-offset-3">
+		<div class="col-xs-12">
             <div class="input-group" id="adv-search">
-                <input type="text" class="form-control" placeholder="Sök i butik"/>
+                <input type="text" id="storesearch" class="form-control" placeholder="Sök i butik"/>
                 <div class="input-group-btn">
                     <div class="btn-group" role="group">
                         <div class="dropdown dropdown-lg">
@@ -81,7 +82,103 @@
           </div>
         </div>
 	</div>
-    <hr>
+    <hr class="col-xs-8 col-xs-offset-2">
+    
+    <div class="ProductDiv col-md-2">
+            <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/80APZS6SUS_89384197_front.jpg">
+            <div id = "ProductTitel">Kostymbyxa</div>
+            <div id = "ProductPrice">299:-</div>
+        </div>
+        <div class="ProductDiv col-md-2">
+            <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/82APFSMOHW_7310647180960_front.jpg">
+            <div id = "ProductTitel">Kostymbyxa</div>
+            <div id = "ProductPrice">299:-</div>
+        </div>
+        <div class="ProductDiv col-md-2">
+             <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/08APLS9SNS_89383827_front.jpg">
+            <div id = "ProductTitel">Kostymbyxa</div>
+            <div id = "ProductPrice">299:-</div>
+        </div>
+        <div class="ProductDiv col-md-2">
+            <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/83APKSWCL2_3114439055429_back.jpg">
+            <div id = "ProductTitel">Kostymbyxa</div>
+            <div id = "ProductPrice">299:-</div>
+        </div>
+        <div class="ProductDiv col-md-2">
+             <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/017922-0029.jpg">
+            <div id = "ProductTitel">Kostymbyxa</div>
+            <div id = "ProductPrice">299:-</div>
+        </div>
+        <div class="ProductDiv col-md-2">
+            <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/01APPOI6T7_5415212479394_711-Skinny-Jeans-Fair-Spirit_detail.jpg">
+            <div id = "ProductTitel">Kostymbyxa</div>
+            <div id = "ProductPrice">299:-</div>
+        </div>
+        <div class="ProductDiv col-md-2">
+             <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/227256-0426.jpg">
+            <div id = "ProductTitel">Kostymbyxa</div>
+            <div id = "ProductPrice">299:-</div>
+        </div>
+        <div class="ProductDiv col-md-2">
+            <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/42APO8EX4S_5415313111469_front.jpg">
+            <div id = "ProductTitel">Kostymbyxa</div>
+            <div id = "ProductPrice">299:-</div>
+        </div>
+        <div class="ProductDiv col-md-2">
+             <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/38APSO19RU_5415212219020_711-Skinny-Daytrip-Back_other.jpg">
+            <div id = "ProductTitel">Kostymbyxa</div>
+            <div id = "ProductPrice">299:-</div>
+        </div>
+        <div class="ProductDiv col-md-2">
+            <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/60AP382AOY_7340110928683_side.jpg">
+            <div id = "ProductTitel">Kostymbyxa</div>
+            <div id = "ProductPrice">299:-</div>
+        </div>
+         <div class="ProductDiv col-md-2">
+            <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/018998-0001.jpg">
+            <div id = "ProductTitel">Kostymbyxa</div>
+            <div id = "ProductPrice">299:-</div>
+        </div>
+        <div class="ProductDiv col-md-2">
+            <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/025605-0029.jpg">
+            <div id = "ProductTitel">Kostymbyxa</div>
+            <div id = "ProductPrice">299:-</div>
+            <div id = ""></div>
+        </div>
+        <div class="ProductDiv col-md-2">
+            <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/025605-0029.jpg">
+            <div id = "ProductTitel">Kostymbyxa</div>
+            <div id = "ProductPrice">299:-</div>
+            <div id = ""></div>
+        </div>
+        <div class="ProductDiv col-md-2">
+            <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/025605-0029.jpg">
+            <div id = "ProductTitel">Kostymbyxa</div>
+            <div id = "ProductPrice">299:-</div>
+            <div id = ""></div>
+        </div>
+        <div class="ProductDiv col-md-2">
+            <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/025605-0029.jpg">
+            <div id = "ProductTitel">Kostymbyxa</div>
+            <div id = "ProductPrice">299:-</div>
+            <div id = ""></div>
+        </div>
+        <div class="ProductDiv col-md-2">
+            <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/025605-0029.jpg">
+            <div id = "ProductTitel">Kostymbyxa</div>
+            <div id = "ProductPrice">299:-</div>
+            <div id = ""></div>
+        </div>
+        <div class="ProductDiv col-md-2">
+             <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/38APSO19RU_5415212219020_711-Skinny-Daytrip-Back_other.jpg">
+            <div id = "ProductTitel">Kostymbyxa</div>
+            <div id = "ProductPrice">299:-</div>
+        </div>
+       <div class="ProductDiv col-md-2">
+             <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/38APSO19RU_5415212219020_711-Skinny-Daytrip-Back_other.jpg">
+            <div id = "ProductTitel">Kostymbyxa</div>
+            <div id = "ProductPrice">299:-</div>
+        </div>
     
    <footer id="sidfot" class="footer">
         <p id="copyright">Presenteras av Koholo Shopping Network © 2016 koholo.com. Alla rättigheter förbehållna</p>
