--- a/Template/products.html
+++ b/Template/products.html
@@ -16,8 +16,8 @@
 </head>
     
 <body>
-    <div id="logga">
-        <img src="logo-koholo.png">
+    <div class="logga">
+        <img id="logo" src="logo-koholo.png">
     </div>
     
 <nav id="navigation" class="navbar navbar-inverse">
